--- a/4-application/app/src/main/AndroidManifest.xml
+++ b/4-application/app/src/main/AndroidManifest.xml
@@ -12,8 +12,13 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Mobdevportfolio" >
-
+        android:theme="@style/Theme.Mobdevportfolio">
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/google_maps_key" />
+        <activity
+            android:name=".MapsActivity"
+            android:exported="true" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
