--- a/4-application/app/build.gradle
+++ b/4-application/app/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     implementation 'androidx.room:room-runtime:2.4.2'
     annotationProcessor 'androidx.room:room-compiler:2.4.2'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.17'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
